@@ -74,6 +74,7 @@ static lo_server lo_server_new_with_proto_internal(const char *group,
                                                    lo_err_handler err_h);
 static int lo_server_add_socket(lo_server s, int socket);
 static void lo_server_del_socket(lo_server s, int index, int socket);
+static int lo_server_join_multicast_group(lo_server s, const char *group);
 
 #ifdef WIN32
 #ifndef gai_strerror
@@ -286,42 +287,14 @@ lo_server lo_server_new_with_proto_internal(const char *group,
 	    lo_server_free(s);
 	    return NULL;
 	}
-    
-    /* Join multicast group if specified. */
-    /* This must be done before bind().   */
-    if (group != NULL) {
-        struct ip_mreq mreq;
-        unsigned int yes = 1;
-        memset(&mreq, 0, sizeof(mreq));
-#ifdef HAVE_INET_ATON
-        if (inet_aton(group, &mreq.imr_multiaddr)==0) {
-            int err = geterror();
-            lo_throw(s, err, strerror(err), "inet_aton()");
-            lo_server_free(s);
-            return NULL;
-        }
-#else
-	mreq.imr_multiaddr.s_addr = inet_addr(group);
-	if (mreq.imr_multiaddr.s_addr == INADDR_ANY
-	    || mreq.imr_multiaddr.s_addr == INADDR_NONE)
-	{
-            int err = geterror();
-            lo_throw(s, err, strerror(err), "inet_addr()");
-            lo_server_free(s);
-            return NULL;
-	}
-#endif
-        mreq.imr_interface.s_addr=htonl(INADDR_ANY);
 
-        setsockopt(s->sockets[0].fd,IPPROTO_IP,IP_ADD_MEMBERSHIP,
-                   &mreq,sizeof(mreq));
-        setsockopt(s->sockets[0].fd,SOL_SOCKET,SO_REUSEADDR,
-                   &yes,sizeof(yes));
-#ifdef SO_REUSEPORT
-        setsockopt(s->sockets[0].fd,SOL_SOCKET,SO_REUSEPORT,
-                   &yes,sizeof(yes));
+    /* Join multicast group if specified. */
+    /* This must be done before bind() on POSIX, but after bind() Windows. */
+#ifndef WIN32
+    if (group != NULL)
+        if (lo_server_join_multicast_group(s, group))
+            return NULL;
 #endif
-    }
 
 	if ((ret = bind(s->sockets[0].fd, used->ai_addr, used->ai_addrlen)) < 0) {
         int err = geterror();
@@ -337,6 +310,13 @@ lo_server lo_server_new_with_proto_internal(const char *group,
 	    return NULL;
 	}
     } while (!used && tries++ < 16);
+
+    /* Join multicast group if specified (see above). */
+#ifdef WIN32
+    if (group != NULL)
+        if (lo_server_join_multicast_group(s, group))
+            return NULL;
+#endif
 
     if (proto == LO_TCP) {
         listen(s->sockets[0].fd, 8);
@@ -406,6 +386,63 @@ lo_server lo_server_new_with_proto_internal(const char *group,
     }
 
     return s;
+}
+
+int lo_server_join_multicast_group(lo_server s, const char *group)
+{
+    struct ip_mreq mreq;
+    unsigned int yes = 1;
+    memset(&mreq, 0, sizeof(mreq));
+#ifdef HAVE_INET_ATON
+    if (inet_aton(group, &mreq.imr_multiaddr)==0) {
+        int err = geterror();
+        lo_throw(s, err, strerror(err), "inet_aton()");
+        lo_server_free(s);
+        return err;
+    }
+#else
+    mreq.imr_multiaddr.s_addr = inet_addr(group);
+    if (mreq.imr_multiaddr.s_addr == INADDR_ANY
+        || mreq.imr_multiaddr.s_addr == INADDR_NONE)
+    {
+        int err = geterror();
+        lo_throw(s, err, strerror(err), "inet_addr()");
+        lo_server_free(s);
+        return err;
+    }
+#endif
+    mreq.imr_interface.s_addr=htonl(INADDR_ANY);
+
+    if (setsockopt(s->sockets[0].fd,IPPROTO_IP,IP_ADD_MEMBERSHIP,
+            &mreq,sizeof(mreq)) < 0)
+    {
+        int err = geterror();
+        lo_throw(s, err, strerror(err), "setsockopt(IP_ADD_MEMBERSHIP)");
+        lo_server_free(s);
+        return err;
+    }
+
+    if (setsockopt(s->sockets[0].fd,SOL_SOCKET,SO_REUSEADDR,
+            &yes,sizeof(yes)) < 0)
+    {
+        int err = geterror();
+        lo_throw(s, err, strerror(err), "setsockopt(SO_REUSEADDR)");
+        lo_server_free(s);
+        return err;
+    }
+
+#ifdef SO_REUSEPORT
+    if (setsockopt(s->sockets[0].fd,SOL_SOCKET,SO_REUSEPORT,
+            &yes,sizeof(yes)) < 0)
+    {
+        int err = geterror();
+        lo_throw(s, err, strerror(err), "setsockopt(SO_REUSEPORT)");
+        lo_server_free(s);
+        return err;
+    }
+#endif
+
+    return 0;
 }
 
 void lo_server_free(lo_server s)
