@@ -3,6 +3,7 @@
 	* Avoid pointer arithmetic on void* types for compilers that can't handle it.
 	* Move all local variable declarations to the top of the scope.
 	* Conditionally avoid the use of variable-argument macros if not GCC.
+	* Fix multicast on Windows: join multicast group after bind() instead of before.
 
 2009-02-17 Stephen Sinclair <radarsat1@gmail.com>
 	* For multicast, enable SO_REUSEPORT as well as SO_REUSEADDR. (Mike Wozniewski)
